부서마다 행사,공지 목록이 다르게 표출되게 수정